# firefox

./: .prettierignore  build.gradle  eslint-rollouts.config.mjs  stylelint-rollouts.config.js
accessible/android/: Platform.cpp
accessible/generic/: DocAccessible.cpp  LocalAccessible.cpp
accessible/ipc/: DocAccessibleParent.cpp
accessible/mac/: mozAccessible.h  mozAccessible.mm
browser/components/: BrowserComponents.manifest
browser/docs/: BrowserStartup.md
browser/locales/: l10n-changesets.json
browser/locales-preview/: aiWindow.ftl
browser/modules/: AboutNewTab.sys.mjs  ZoomUI.sys.mjs
caps/: BasePrincipal.cpp  OriginAttributes.cpp
docs/_addons/: etp_matrix.py
docshell/base/: BrowsingContext.cpp  CanonicalBrowsingContext.h  nsDocShell.cpp
dom/animation/: Animation.h  AnimationEventDispatcher.h  ScrollTimeline.cpp  ScrollTimeline.h  ViewTimeline.cpp
dom/base/: AbstractRange.cpp  ContentList.cpp  Document.cpp  Document.h  DocumentOrShadowRoot.cpp  Element.cpp  Element.h  EventSource.cpp  FragmentOrElement.cpp  FullscreenChange.h  nsContentPolicyType.h  (+11 more)
gradle/: libs.versions.toml
image/: SourceBuffer.h
mfbt/: CheckedInt.h
security/lockstore/lockstore_rs/: Cargo.toml
security/lockstore/lockstore_rs/src/: crypto.rs  datastore.rs  keystore.rs  lib.rs  utils.rs
security/lockstore/lockstore_rs/tests/: crypto_tests.rs  datastore_tests.rs  keystore_tests.rs
storage/: mozStorageConnection.h
taskcluster/: config.yml
widget/: ContentEvents.h  GfxInfoBase.cpp  GfxInfoFeatureDefs.inc  MouseEvents.h  ScrollbarDrawing.cpp  WidgetMessageUtils.h
(+845 files in other folders)
