[package]
name = "lockstore_rs"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
base64 = "0.21"
kvstore = { path = "../../../toolkit/components/kvstore" }
nserror = { path = "../../../xpcom/rust/nserror" }
nss-gk-api = { git = "https://github.com/beurdouche/nss-gk-api", rev = "7bb482ecb8f1a2f49e32cf6b67f9bdc48a1571f0", default-features = false }
nsstring = { path = "../../../xpcom/rust/nsstring" }
serde = "1"
serde_json = { version = "1", features = ["float_roundtrip"] }
thiserror = "1"
xpcom = { path = "../../../xpcom/rust/xpcom" }

[dev-dependencies]
kvstore = { path = "../../../toolkit/components/kvstore" }
nss-gk-api = { git = "https://github.com/beurdouche/nss-gk-api", rev = "7bb482ecb8f1a2f49e32cf6b67f9bdc48a1571f0", default-features = false }
rusqlite = "0.31"
tempfile = "3"
